nom-image-change

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </a>
                 <a href="./Le-delice.html" class="lien-carte">
-                        <img class="images" src="images/restaurants/Le-délice.jpg" alt="Le délice des sens">
+                        <img class="images" src="images/restaurants/Le-delice.jpg" alt="Le délice des sens">
                     <div class="description-carte">
                         <div class="Le-délice">
                             <h4 class="titre-carte">Le délice des sens</h4>
