--- a/La-palette.html
+++ b/La-palette.html
@@ -16,7 +16,7 @@
     <header>
         <div class="first-title--page1">
             <div class="logo-fleche">
-                <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+                <a href="./index.html"><i class="fa fa-arrow-left"></i></a>
             </div>
             <div class="logo-oh-my-food">
                 <img class="logo" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
@@ -35,6 +35,8 @@
                 <div class="heart2"><i class="fas fa-heart"></i></div>
             </div>
         </div>
+    <div class="div-globale-des-menus">
+     <div class="div-entrées">
         <div class="titre-entree--page1">
             <h2 class="underline-page1">ENTRÉES</h2>
         </div>
@@ -48,7 +50,7 @@
                     <p class="p-prix--page1">25€</p>
                 </div>
                 <div class="div-au-survol">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fa fa-check-circle"></i>
                 </div>
             </div>
             <div class="description-carte--page1">
@@ -60,7 +62,7 @@
                         <p class="p-prix--page1">35€</p>
                     </div>
                     <div class="div-au-survol">
-                        <i class="fas fa-check-circle"></i>
+                        <i class="fa fa-check-circle"></i>
                     </div>
             </div>
             <div class="description-carte--page1">
@@ -72,10 +74,12 @@
                         <p class="p-prix--page1">20€</p>
                     </div>
                     <div class="div-au-survol">
-                        <i class="fas fa-check-circle"></i>
+                        <i class="fa fa-check-circle"></i>
                     </div>
             </div>
         </div>
+    </div> 
+    <div class="div-entrées">
         <div class="titre-plats--page1">
             <h2 class="underline-page1">PLATS</h2>
         </div>
@@ -89,7 +93,7 @@
                     <p class="p-prix--page1">40€</p>
                 </div>
                 <div class="div-au-survol">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fa fa-check-circle"></i>
                 </div>
             </div>
             <div class="description-carte--page1">
@@ -101,7 +105,7 @@
                         <p class="p-prix--page1">35€</p>
                     </div>
                     <div class="div-au-survol">
-                        <i class="fas fa-check-circle"></i>
+                        <i class="fa fa-check-circle"></i>
                     </div>
             </div>
             <div class="description-carte--page1">
@@ -113,10 +117,12 @@
                         <p class="p-prix--page1">44€</p>
                     </div>
                     <div class="div-au-survol">
-                        <i class="fas fa-check-circle"></i>
+                        <i class="fa fa-check-circle"></i>
                     </div>
             </div>
         </div>
+    </div>
+    <div class="div-entrées">
         <div class="titre-dessert--page1">
             <h2 class="underline-page1">DESSERTS</h2>
         </div>
@@ -130,7 +136,7 @@
                     <p class="p-prix--page1">18€</p>
                 </div>
                 <div class="div-au-survol">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fa fa-check-circle"></i>
                 </div>
             </div>
             <div class="description-carte--page1">
@@ -142,7 +148,7 @@
                         <p class="p-prix--page1">22€</p>
                     </div>
                     <div class="div-au-survol">
-                        <i class="fas fa-check-circle"></i>
+                        <i class="fa fa-check-circle"></i>
                     </div>
             </div>
             <div class="description-carte--page1">
@@ -154,10 +160,12 @@
                         <p class="p-prix--page1">23€</p>
                     </div>
                     <div class="div-au-survol">
-                        <i class="fas fa-check-circle"></i>
+                        <i class="fa fa-check-circle"></i>
                     </div>
             </div>
         </div>
+        </div>
+    </div> 
         <div class="button-submit">
             <button type="submit" class="explorer-button--page-1">Commander</button>
         </div>
@@ -168,7 +176,7 @@
         </div>
         <div class="second-block-footer">
             <div class="proposer-un-resto">
-                <i class="fas fa-utensils"></i>
+                <i class="fa fa-utensils"></i>
                 <p class="p-footer">Proposer un restaurant</p>
             </div>
             <div class="partenaire">
