--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="location">
                 <form>
-                    <i class="fas fa-map-marker-alt"></i>
+                    <i class="fa fa-map-marker-alt"></i>
                     <label for="search" class="visuallyhidden"></label>
                     <input type="text" name="search" id="search" placeholder="Paris,Belleville">   
                 </form>
@@ -61,7 +61,7 @@
                     <div class="div--pink">
                         <div class="number">3</div>
                         <div class="logo-fonctionnement">
-                            <i class="fas fa-store"></i>
+                            <i class="fa fa-store"></i>
                         </div>
                             <p>Dégustez au restaurant</p>
                     </div>
@@ -71,11 +71,13 @@
         <section class="section2">
             <h2 class="titre-restaurants">Restaurants</h2>
             <div class="cartes-resto">
+            <div class="carte-par-carte">
                 <a href="./La-palette.html" class="lien-carte">
                         <img class="images" src="images/restaurants/La-plalette.jpg" alt="La palette du goût">
                     <div class="block-nouveau">
                         <p class="p-nouveau">Nouveau</p>
                     </div>
+                </a>
                     <div class="description-carte">
                         <div class="La-Palette">
                             <h4 class="titre-carte">La palette du goût</h4>
@@ -86,12 +88,14 @@
                             <div class="heart2"><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
-                </a>
+                </div>
+            <div class="carte-par-carte">
                 <a href="./La-note-enchantee.html" class="lien-carte">
                         <img class="images" src="images/restaurants/La-note.jpg" alt="La note enchantée">
                     <div class="block-nouveau">
                         <p class="p-nouveau">Nouveau</p>
                     </div>
+                </a>
                     <div class="description-carte">
                         <div class="La-note">
                             <h4 class="titre-carte">La note enchantée</h4>
@@ -102,9 +106,11 @@
                             <div class="heart2"><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
-                </a>
+            </div>
+            <div class="carte-par-carte">       
                 <a href="./A-la-francaise.html" class="lien-carte">
                         <img class="images" src="images/restaurants/A-la-francaise.jpg" alt="A la française">
+                </a>
                     <div class="description-carte">
                         <div class="A-la-francaise">
                             <h4 class="titre-carte">A la française</h4>
@@ -115,9 +121,11 @@
                             <div class="heart2"><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
-                </a>
+            </div>
+            <div class="carte-par-carte">  
                 <a href="./Le-delice.html" class="lien-carte">
                         <img class="images" src="images/restaurants/Le-delice.jpg" alt="Le délice des sens">
+                </a>
                     <div class="description-carte">
                         <div class="Le-délice">
                             <h4 class="titre-carte">Le délice des sens</h4>
@@ -128,7 +136,7 @@
                             <div class="heart2"><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
-                </a>
+            </div>
             </div>
         </section>
     </main>
@@ -138,7 +146,7 @@
         </div>
         <div class="second-block-footer">
             <div class="proposer-un-resto">
-                <i class="fas fa-utensils"></i>
+                <i class="fa fa-utensils"></i>
                 <p class="p-footer">Proposer un restaurant</p>
             </div>
             <div class="partenaire">
